--- a/site-plan.html
+++ b/site-plan.html
@@ -229,21 +229,21 @@
 
       <h3>Home</h3>
       <p>         
-        [Any additional details about home that the wireframe does not make clear]
+        
       </p>
-      <img src="#" alt="home page wireframe">
+      <img src="./img/home-portfolio.png" alt="home page wireframe" width="600px">
 
-      <h3>[Page 2]</h3>
+      <h3>Skills</h3>
       <p>         
-        [Any additional details about page 2 that the wireframe does not make clear]
+        The wireframe for the Skills page is a thoughtful and structured representation of my proficiency in frontend development languages. The design focuses on clarity and ease of navigation to provide visitors with a quick and comprehensive understanding of my skill set
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <img class="wireframe-p" src="./img/skills-page.png" alt="page skills wireframe" width="600px">
 
-      <h3>[Page 3]</h3>
+      <h3>Portfolio</h3>
       <p>         
-        [Any additional details about page 3 that the wireframe does not make clear]
+        The wireframe for the Portfolio section is designed to effectively showcase my diverse range of projects, providing visitors with a compelling visual representation of my skills and expertise in frontend development.
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <img src="./img/Portfolio-page.png" alt="page portfolio wireframe" width="600px">
     </main>
   </body>
 </html>
