--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
 </head>
 <body>
     <header>
-        <img src="#" alt="Iran Aguirre's Logo">
+        <img src="./img/lar-logo.svg" alt="Iran Aguirre's Logo">
         <nav>
             <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#skills">Skills</a></li>
-                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="./skills.html">Skills</a></li>
+                <li><a href="./portfolio.html">Portfolio</a></li>
+                <li><a href="./site-plan.html">Site plan</a></li>
             </ul>
         </nav>
     </header>
@@ -33,7 +34,7 @@
                 </div>
             </div>
             <div class="hero-img">
-                <img src="#" alt="hero image">
+                <img src="./img/fotodeperfil-removebg-preview.png" alt="hero image">
             </div>
         </section>
         <!-- Counter Section -->
@@ -72,5 +73,18 @@
             </div>
         </section>
     </main>
+    <footer>
+        <div>
+            <p>Contact: iaguirre4@gmail.com</p>
+            <p>Phone: 7772562179</p>
+        </div>
+        <div>
+            <ul>
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./skills.html">Skills</a></li>
+                <li><a href="./portfolio.html">Portfolio</a></li>
+            </ul>
+        </div>
+    </footer>
 </body>
 </html>
