--- a/skills.html
+++ b/skills.html
@@ -6,9 +6,72 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Skills</title>
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
-
 </head>
 <body>
-    
+    <header>
+        <img src="./img/lar-logo.svg" alt="lARTEC Logo">
+        <nav>
+            <ul>
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./skills.html">Skills</a></li>
+                <li><a href="./portfolio.html">Portfolio</a></li>
+                <li><a href="./site-plan.html">Site plan</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section class="skills">
+            <h2>Skills</h2>
+            <div class="skills-container">
+                <div class="skills-content">
+                    <div class="skills-left-content">
+                        <img src="./img/skills-img/safar-safarov-koOdUvfGr4c-unsplash.jpg" alt="code img">
+                    </div>
+                    <div class="skills-right-content">
+                        <div class="language-skills-card">
+                            <img src="./img/skills-img/lenguage-icons/python.svg" alt="python icon" width="100px">
+                        </div>
+                        <div class="language-skills-card">
+                            <img src="/img/skills-img/lenguage-icons/nextjs.svg" alt="next icon" width="100px">
+                        </div>
+                        <div class="language-skills-card">
+                            <img src="/img/skills-img/lenguage-icons/nodejs.svg" alt="node icon" width="100px">
+                        </div>
+                        <div class="language-skills-card">
+                            <img src="/img/skills-img/lenguage-icons/sass.svg" alt="sass icon" width="100px">
+                        </div>
+                        <div class="language-skills-card">
+                            <img src="/img/skills-img/lenguage-icons/tailwindcss-icon.svg" alt="tailwind icon" width="100px">
+                        </div>
+                        <div class="language-skills-card">
+                            <img src="/img/skills-img/lenguage-icons/react.svg" alt="react icon" width="100px">
+                        </div>
+                        <div class="language-skills-card">
+                            <img src="/img/skills-img/lenguage-icons/javascript.svg" alt="javascript icon" width="100px">
+                        </div>
+                    </div>
+                </div>
+                <div class="skill-bottom">
+                    <p class="skill-bottom-text">
+                        As a Frontend Developer, I've built a robust skill set through my professional journey and participation in specialized training programs, such as the Oracle Bootcamp. My focus revolves around creating intuitive and engaging user experiences, leveraging the latest web development technologies and best practices.
+                    </p>
+                </div>
+            </div>
+        </section>
+
+    </main>
+    <footer>
+        <div>
+            <p>Contact: iaguirre4@gmail.com</p>
+            <p>Phone: 7772562179</p>
+        </div>
+        <div>
+            <ul>
+                <li><a href="./home.html">Home</a></li>
+                <li><a href="./skills.html">Skills</a></li>
+                <li><a href="./portfolio.html">Portfolio</a></li>
+            </ul>
+        </div>
+    </footer>
 </body>
 </html>
