--- a/index.html
+++ b/index.html
@@ -5,86 +5,108 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700;900&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
+    <link rel="stylesheet" href="./assets/styles/basics.css/basics.css">
+    <link rel="stylesheet" href="./assets/styles/home-styles/home-styles.css">
 </head>
 <body>
-    <header>
-        <img src="./img/lar-logo.svg" alt="Iran Aguirre's Logo">
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="./skills.html">Skills</a></li>
-                <li><a href="./portfolio.html">Portfolio</a></li>
-                <li><a href="./site-plan.html">Site plan</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <section id="hero">
-            <div class="hero-text">
-                <h1>Hi, I am Iran Aguirre</h1>
-                <h2>Frontend Developer</h2>
-                <p>Medium level experience in Web design, and knowledge, producing Quality Work.</p>
-                <a href="#contact" class="contact-btn">Contact Me <i class="uil uil-message"></i></a>
-                <div class="social-icons">
-                    <a href="https://www.facebook.com/" target="_blank"><i class="uil uil-facebook-f"></i></a>
-                    <a href="https://www.instagram.com/" target="_blank"><i class="uil uil-instagram-alt"></i></a>
-                    <a href="https://github.com/" target="_blank"><i class="uil uil-github"></i></a>
-                    <a href="https://twitter.com/" target="_blank"><i class="uil uil-twitter"></i></a>
+    <div class="home-container grid">
+        <header class="home-header">
+            <img src="./assets/img/lar-logo.svg" alt="Iran Aguirre's Logo">
+            <nav class="home-nav">
+                <ul class="nav-container">
+                    <li><a class="nav-link" href="index.html">Home</a></li>
+                    <li><a class="nav-link" href="./skills.html">Skills</a></li>
+                    <li><a class="nav-link" href="./portfolio.html">Portfolio</a></li>
+                    <li><a class="nav-link" href="./site-plan.html">Site plan</a></li>
+                </ul>
+            </nav>
+        </header>
+        <main class="hero-container">
+            <section id="hero" class="grid section">
+                <div class="hero-text">
+                    <h1>Hi, I'm Iran Aguirre</h1>
+                    <h2>Frontend Developer</h2>
+                    <p>Medium level experience in Web design, and knowledge, producing Quality Work.</p>
+                    <a href="#contact" class="contact-btn btn">Contact Me <i class="uil uil-message"></i></a>
+                    <div class="social-icons">
+                        <a href="https://www.facebook.com/" target="_blank"><i class="uil uil-facebook-f"></i></a>
+                        <a href="https://www.linkedin.com/in/iran-aguirre/" target="_blank"><i class="uil uil-linkedin"></i></a>
+                        <a href="https://github.com/iaguirre19" target="_blank"><i class="uil uil-github"></i></a>
+                        <a href="https://twitter.com/" target="_blank"><i class="uil uil-twitter"></i></a>
+                    </div>
                 </div>
-            </div>
-            <div class="hero-img">
-                <img src="./img/fotodeperfil-removebg-preview.png" alt="hero image">
-            </div>
-        </section>
-        <!-- Counter Section -->
-        <section class="counters" id="counterSection">
-            <!-- Counter 1 -->
-            <div class="counter">
-                <div class="counter-top">
-                    <span class="counter-icon">+</span>
-                    <span class="counter-number">1</span>
+                <div class="hero-img">
+                    <svg class="hero-blob" viewBox="0 0 200 187" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                                <mask id="mask0" mask-type="alpha">
+                                    <path d="M190.312 36.4879C206.582 62.1187 201.309 102.826 182.328 134.186C163.346 165.547 
+                                    130.807 187.559 100.226 186.353C69.6454 185.297 41.0228 161.023 21.7403 129.362C2.45775 
+                                    97.8511 -7.48481 59.1033 6.67581 34.5279C20.9871 10.1032 59.7028 -0.149132 97.9666 
+                                    0.00163737C136.23 0.303176 174.193 10.857 190.312 36.4879Z"/>
+                                </mask>
+                                <g mask="url(#mask0)">
+                                    <path d="M190.312 36.4879C206.582 62.1187 201.309 102.826 182.328 134.186C163.346 
+                                    165.547 130.807 187.559 100.226 186.353C69.6454 185.297 41.0228 161.023 21.7403 
+                                    129.362C2.45775 97.8511 -7.48481 59.1033 6.67581 34.5279C20.9871 10.1032 59.7028 
+                                    -0.149132 97.9666 0.00163737C136.23 0.303176 174.193 10.857 190.312 36.4879Z"/>
+
+                            <image class="hero-blob-img" x="19" y="-40" href="/assets/img/fotodeperfil-removebg-preview.png"/>
+                        </g>
+                    </svg>
                 </div>
-                <p class="counter-description">Year experience</p>
-            </div>
-            <!-- Counter 2 -->
-            <div class="counter">
-                <div class="counter-top">
-                    <span class="counter-icon">+</span>
-                    <span class="counter-number">9</span>
+            </section>
+            <!-- Counter Section -->
+            <section class="counters section" id="counterSection">
+                <!-- Counter 1 -->
+                <div class="counter">
+                    <div class="counter-top">
+                        <span class="counter-icon">+</span>
+                        <span class="counter-number">1</span>
+                    </div>
+                    <p class="counter-description">Year experience</p>
                 </div>
-                <p class="counter-description">completed Projects</p>
-            </div>
-            <!-- Counter 3 -->
-            <div class="counter">
-                <div class="counter-top">
-                    <span class="counter-icon">+</span>
-                    <span class="counter-number">3</span>
+                <!-- Counter 2 -->
+                <div class="counter">
+                    <div class="counter-top">
+                        <span class="counter-icon">+</span>
+                        <span class="counter-number">9</span>
+                    </div>
+                    <p class="counter-description">completed Projects</p>
                 </div>
-                <p class="counter-description">Companies Worked</p>
-            </div>
-            <!-- Counter 4 -->
-            <div class="counter">
-                <div class="counter-top">
-                    <span class="counter-icon">+</span>
-                    <span class="counter-number">7</span>
+                <!-- Counter 3 -->
+                <div class="counter">
+                    <div class="counter-top">
+                        <span class="counter-icon">+</span>
+                        <span class="counter-number">3</span>
+                    </div>
+                    <p class="counter-description">Companies Worked</p>
                 </div>
-                <p class="counter-description">Satisfied clients</p>
+                <!-- Counter 4 -->
+                <div class="counter">
+                    <div class="counter-top">
+                        <span class="counter-icon">+</span>
+                        <span class="counter-number">7</span>
+                    </div>
+                    <p class="counter-description">Satisfied clients</p>
+                </div>
+            </section>
+        </main>
+        <footer class="home-footer">
+            <div class="footer-contact">
+                <p>Contact: iaguirre4@gmail.com</p>
+                <p>Phone: 7772562179</p>
             </div>
-        </section>
-    </main>
-    <footer>
-        <div>
-            <p>Contact: iaguirre4@gmail.com</p>
-            <p>Phone: 7772562179</p>
-        </div>
-        <div>
-            <ul>
-                <li><a href="./index.html">Home</a></li>
-                <li><a href="./skills.html">Skills</a></li>
-                <li><a href="./portfolio.html">Portfolio</a></li>
-            </ul>
-        </div>
-    </footer>
+            <div class="footer-nav">
+                <ul class="nav-container footer-nav-container">
+                    <li><a class="nav-link" href="./index.html">Home</a></li>
+                    <li><a class="nav-link" href="./skills.html">Skills</a></li>
+                    <li><a class="nav-link" href="./portfolio.html">Portfolio</a></li>
+                </ul>
+            </div>
+        </footer>
+    </div>
 </body>
 </html>
