--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 </ul>
             </nav>
         </header>
-        <main class="hero-container">
+        <main class="hero-container main-container">
             <section id="hero" class="grid section">
                 <div class="hero-text">
                     <h1>Hi, I'm Iran Aguirre</h1>
