fixing the directory path for site plan page

--- a/site-plan.html
+++ b/site-plan.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./styles/site-plan.css">
+    <link rel="stylesheet" href="./assets/styles/site-plan.css">
 </head>
 <body>
     <header>
@@ -30,7 +30,7 @@
       <h2>Branding</h2>
       <h3>Website Logo</h3>
       <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-      <img src="./img/lar-logo.svg" alt="Logo image">
+      <img src="./assets/img/lar-logo.svg" alt="Logo image">
       <hr>
       <h2>
         Style Guide
@@ -133,8 +133,8 @@
         Welcome to my personal website! I'm Iran Aguirre Front-end developer, a passionate individual in the field of programming and technology. Since my childhood, I've been drawn to the world of computing and the creativity it offers. My passions encompass programming, web design, and solving complex challenges. Throughout my career, I've had the opportunity to work on exciting projects that have enriched my skills and knowledge. Here, I'll share my story, experience, and achievements so you can get to know me better
       </p>
       <p>Images for the Home page</p>
-        <img src="./img/fotodeperfil-removebg-preview.png" alt="image for homepage" width="200px">
-        <img src="./img/IMG_9918-removebg-preview(1).png" alt="image for homepage" width="200px">
+        <img src="./assets/img/fotodeperfil-removebg-preview.png" alt="image for homepage" width="200px">
+        <img src="./assets/img/IMG_9918-removebg-preview(1).png" alt="image for homepage" width="200px">
 
       </ul>
       <h3>Qualifications</h3>
@@ -187,8 +187,8 @@
         Throughout my academic and professional journey, my commitment to excellence and my unwavering passion for learning have consistently propelled me to tackle challenges effectively and deliver innovative solutions.
       </p>
       <p>Images for the Qualifications page</p>
-        <img src="./img/chen-Qtu3hGinLF8-unsplash.jpg" alt="image for page"width="400px">
-        <img src="./img/christina-wocintechchat-com-6Dv3pe-JnSg-unsplash.jpg" alt="image for page" width="400px">
+        <img src="./assets/img/chen-Qtu3hGinLF8-unsplash.jpg" alt="image for page"width="400px">
+        <img src="./assets/img/christina-wocintechchat-com-6Dv3pe-JnSg-unsplash.jpg" alt="image for page" width="400px">
 
       </ul>
       <h3>Portfolio</h3>
@@ -215,9 +215,9 @@
     These projects represent just a fraction of my portfolio, and I'm eager to share more about my contributions and achievements on my website.
   </p>
       <p>Images for the Portfolio</p>
-        <img src="./img/rsz_agi-phone-book.png" alt="image for page3" width="600px">
-        <img src="./img/rsz_hr-form.png" alt="image for page3" width="600px">
-        <img src="./img/evitiu.png" alt="image for page3" width="600px">
+        <img src="./assets/img/rsz_agi-phone-book.png" alt="image for page3" width="600px">
+        <img src="./assets/img/rsz_hr-form.png" alt="image for page3" width="600px">
+        <img src="./assets/img/evitiu.png" alt="image for page3" width="600px">
 
       </ul>
       <hr>
@@ -231,19 +231,19 @@
       <p>         
         
       </p>
-      <img src="./img/home-portfolio.png" alt="home page wireframe" width="600px">
+      <img src="./assets/img/home-portfolio.png" alt="home page wireframe" width="600px">
 
       <h3>Skills</h3>
       <p>         
         The wireframe for the Skills page is a thoughtful and structured representation of my proficiency in frontend development languages. The design focuses on clarity and ease of navigation to provide visitors with a quick and comprehensive understanding of my skill set
       </p>
-      <img class="wireframe-p" src="./img/skills-page.png" alt="page skills wireframe" width="600px">
+      <img class="wireframe-p" src="./assets/img/skills-page.png" alt="page skills wireframe" width="600px">
 
       <h3>Portfolio</h3>
       <p>         
         The wireframe for the Portfolio section is designed to effectively showcase my diverse range of projects, providing visitors with a compelling visual representation of my skills and expertise in frontend development.
       </p>
-      <img src="./img/Portfolio-page.png" alt="page portfolio wireframe" width="600px">
+      <img src="./assets/img/Portfolio-page.png" alt="page portfolio wireframe" width="600px">
     </main>
   </body>
 </html>
