--- a/portfolio.html
+++ b/portfolio.html
@@ -6,108 +6,118 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700;900&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
+    <link rel="stylesheet" href="./assets/styles/basics.css/basics.css">
+    <link rel="stylesheet" href="./assets/styles/home-styles/home-styles.css">
+    <link rel="stylesheet" href="./assets/styles/skills-styles/skills.css">
+    <link rel="stylesheet" href="./assets/styles/portfolio-page/portfolio-styles.css">
 </head>
 <body>
-    <header>
-        <img src="./img/lar-logo.svg" alt="LARtech Logo">
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="./skills.html">Skills</a></li>
-                <li><a href="./portfolio.html">Portfolio</a></li>
-                <li><a href="./site-plan.html">Site plan</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <section class="portfolio">
-            <div class="portfolio-title">
-                <h2>Portfolio</h2>
-                <p>Most Recent work</p>
-            </div>
-            <div class="portfolio-container">
-                <div class="portfolio-content">
-                    <div class="portfolio-left-content">
-                        <img src="./img/evitiu.png" alt="evitiu page" width="600px">
+    <div class="home-container grid">
+        <header class="home-header">
+            <img src="./assets/img/lar-logo.svg" alt="Iran Aguirre's Logo">
+            <nav class="home-nav">
+                <ul class="nav-container">
+                    <li><a class="nav-link" href="index.html">Home</a></li>
+                    <li><a class="nav-link" href="./skills.html">Skills</a></li>
+                    <li><a class="nav-link" href="./portfolio.html">Portfolio</a></li>
+                    <li><a class="nav-link" href="./site-plan.html">Site plan</a></li>
+                </ul>
+            </nav>
+        </header>
+        <main>
+            <section class="portfolio">
+                <div class="portfolio-title">
+                    <h2>Portfolio</h2>
+                    <p>Most Recent work</p>
+                </div>
+                <div class="portfolio-container"> <!--swipe container -->
+                    <div class="portfolio-content">
+                        <div class="portfolio-left-content">
+                            <img src="./img/evitiu.png" alt="evitiu page" width="600px">
+                        </div>
+                        <div class="portfolio-right-content">
+                            <div class="portfolio-right-data">
+                                <h2>Evitiu Landing page</h2>
+                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illum minus aliquid, ducimus accusamus assumenda dolorum, reiciendis magni fuga quam, distincti</p>
+                                <div class="btn-data">
+                                    <button>
+                                        <span>Demo</span>
+                                        <i class="uil uil-arrow-right"></i>
+                                    </button>
+                                    <button>
+                                        <span>Code</span>
+                                        <i class="uil uil-github"></i>
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                    <div class="portfolio-right-content">
-                        <div class="portfolio-right-data">
-                            <h2>Evitiu Landing page</h2>
-                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illum minus aliquid, ducimus accusamus assumenda dolorum, reiciendis magni fuga quam, distincti</p>
-                            <div class="btn-data">
-                                <button>
-                                    <span>Demo</span>
-                                    <i class="uil uil-arrow-right"></i>
-                                </button>
-                                <button>
-                                    <span>Code</span>
-                                    <i class="uil uil-github"></i>
-                                </button>
+                    <div class="portfolio-content">
+                        <div class="portfolio-left-content">
+                            <img src="./img/rsz_agi-phone-book.png" alt="phone book page" width="600px">
+                        </div>
+                        <div class="portfolio-right-content">
+                            <div class="portfolio-right-data">
+                                <h2>Phone Book</h2>
+                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam earum possimus ullam sapiente, laborum rerum maiores nobis nisi nulla sequi</p>
+                                <div class="btn-data">
+                                    <button>
+                                        <span>Demo</span>
+                                        <i class="uil uil-arrow-right"></i>
+                                    </button>
+                                    <button>
+                                        <span>Code</span>
+                                        <i class="uil uil-github"></i>
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="portfolio-content">
+                        <div class="portfolio-left-content">
+                            <img src="./img/rsz_hr-form.png" alt="agi form page" width="600px">
+                        </div>
+                        <div class="portfolio-right-content">
+                            <div class="portfolio-right-data">
+                                <h2>AGI Form</h2>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis quo sit eveniet assumenda vel ab nulla repellendus ex eius ad a libero tenetur ut, temporibus eum illo dolo</p>
+                                <div class="btn-data">
+                                    <button>
+                                        <span>Demo</span>
+                                        <i class="uil uil-arrow-right"></i>
+                                    </button>
+                                    <button>
+                                        <span>Code</span>
+                                        <i class="uil uil-github"></i>
+                                    </button>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="portfolio-content">
-                    <div class="portfolio-left-content">
-                        <img src="./img/rsz_agi-phone-book.png" alt="phone book page" width="600px">
-                    </div>
-                    <div class="portfolio-right-content">
-                        <div class="portfolio-right-data">
-                            <h2>Phone Book</h2>
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam earum possimus ullam sapiente, laborum rerum maiores nobis nisi nulla sequi</p>
-                            <div class="btn-data">
-                                <button>
-                                    <span>Demo</span>
-                                    <i class="uil uil-arrow-right"></i>
-                                </button>
-                                <button>
-                                    <span>Code</span>
-                                    <i class="uil uil-github"></i>
-                                </button>
-                            </div>
-                        </div>
-                    </div>
+                <div class="portfolio-arrows">
+                    <i class="uil uil-angle-left-b"></i>
+                    <i class="uil uil-angle-right-b"></i>
                 </div>
-                <div class="portfolio-content">
-                    <div class="portfolio-left-content">
-                        <img src="./img/rsz_hr-form.png" alt="agi form page" width="600px">
-                    </div>
-                    <div class="portfolio-right-content">
-                        <div class="portfolio-right-data">
-                            <h2>AGI Form</h2>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis quo sit eveniet assumenda vel ab nulla repellendus ex eius ad a libero tenetur ut, temporibus eum illo dolo</p>
-                            <div class="btn-data">
-                                <button>
-                                    <span>Demo</span>
-                                    <i class="uil uil-arrow-right"></i>
-                                </button>
-                                <button>
-                                    <span>Code</span>
-                                    <i class="uil uil-github"></i>
-                                </button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+            </section>
+        </main>
+        <footer class="home-footer">
+            <div class="footer-contact">
+                <p>Contact: iaguirre4@gmail.com</p>
+                <p>Phone: 7772562179</p>
             </div>
-            <div class="portfolio-arrows">
-                <i class="uil uil-angle-left-b"></i>
-                <i class="uil uil-angle-right-b"></i>
+            <div class="footer-nav">
+                <ul class="nav-container footer-nav-container">
+                    <li><a class="nav-link" href="./index.html">Home</a></li>
+                    <li><a class="nav-link" href="./skills.html">Skills</a></li>
+                    <li><a class="nav-link" href="./portfolio.html">Portfolio</a></li>
+                </ul>
             </div>
-        </section>
-    </main>
-    <footer>
-        <div>
-            <p>Contact: iaguirre4@gmail.com</p>
-            <p>Phone: 7772562179</p>
-        </div>
-        <div>
-            <ul>
-                <li><a href="./index.html">Home</a></li>
-                <li><a href="./skills.html">Skills</a></li>
-                <li><a href="./portfolio.html">Portfolio</a></li>
-            </ul>
-        </div>
-    </footer>
+        </footer>
+    </div>
 </body>
 </html>
